<resources>
    <string name="app_name">Coding Keyboard</string>
    <string name="amp">&amp;</string>
    <string name="b"><![CDATA[<]]></string>
    <string name="slash"><![CDATA[\/]]></string>
    <string name="aboutapp">About app</string>
    <string name="aboutdev">About Developer</string>
    <string name="name">Ajay Krishna P</string>
    <string name="college">B.Tech CSE student at Hindustan Institute of Technology and Science, Chennai</string>
    <string name="hometown">Hometown- Thiruvananthapuram, Kerala</string>
    <string name="Credits">Credits</string>
    <string name="stackoverflow">1. www.stackoverflow.com -Technical support.</string>
    <string name="devand">2. http://developer.android.com -Technical support</string>
    <string name="flaticon">www.flaticon.com - for all awesome icons in this app. Tap on the button to view individual attribution.</string>
    <string name="email">Email- ajkrishna7117me@gmail.com</string>
    <string name="linkedin">Linkedin- https://www.linkedin.com/in/ajay-krishna-p-586533151/</string>
    <string name="contact">Contact</string>
    <string name="aboutText">Coding on mobile made easy. No more switching between keyboard views to select the characters you need in your code.
    Coding keyboard is the one stop solution to make programming easy and comfortable in mobile phones. Numbers, characters and special characters all within one simple keyboard view.</string>
    <string name="website">Website- https://codingkeyboard.carrd.co/</string>
    <string name="link1"><div>Icons made by <a href="https://www.flaticon.com/authors/pixel-perfect" title="Pixel perfect">Pixel perfect</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" target="_blank" title="Creative Commons BY 3.0">CC 3.0 BY</a></div></string>
    <string name="link2"><div>Icons made by <a href="https://www.flaticon.com/authors/smashicons" title="Smashicons">Smashicons</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" target="_blank" title="Creative Commons BY 3.0">CC 3.0 BY</a></div></string>
    <string name="link3"><div>Icons made by <a href="https://www.flaticon.com/authors/pause08" title="Pause08">Pause08</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" target="_blank" title="Creative Commons BY 3.0">CC 3.0 BY</a></div></string>
    <string name="link4"><div>Icons made by <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" target="_blank" title="Creative Commons BY 3.0">CC 3.0 BY</a></div></string>
    <string name="link5"><div>Icons made by <a href="https://www.flaticon.com/authors/smashicons" title="Smashicons">Smashicons</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" target="_blank" title="Creative Commons BY 3.0">CC 3.0 BY</a></div></string>
    <string name="link6"><div>Icons made by <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" target="_blank" title="Creative Commons BY 3.0">CC 3.0 BY</a></div></string>
    <string name="link7"><div>Icons made by <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" target="_blank" title="Creative Commons BY 3.0">CC 3.0 BY</a></div></string>
    <string name="link8"><div>Icons made by <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" target="_blank" title="Creative Commons BY 3.0">CC 3.0 BY</a></div></string>
    <string name="link9"><div>Icons made by <a href="https://www.flaticon.com/authors/dave-gandy" title="Dave Gandy">Dave Gandy</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" target="_blank" title="Creative Commons BY 3.0">CC 3.0 BY</a></div></string>
    <string name="link10"><div>Icons made by <a href="https://www.flaticon.com/authors/pixelmeetup" title="Pixelmeetup">Pixelmeetup</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" target="_blank" title="Creative Commons BY 3.0">CC 3.0 BY</a></div></string>
    <string name="link11"><div>Icons made by <a href="https://www.flaticon.com/authors/google" title="Google">Google</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" target="_blank" title="Creative Commons BY 3.0">CC 3.0 BY</a></div></string>
    <string name="link12"><div>Icons made by <a href="https://www.flaticon.com/authors/google" title="Google">Google</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" target="_blank" title="Creative Commons BY 3.0">CC 3.0 BY</a></div></string>
    <string name="infoabout">This app does not collect any kind of data</string>
    <string name="download_adfree">Download AD FREE version from Play store</string>
    <string name="download_now">DOWNLOAD NOW</string>
    <string name="have_feedback">Have suggestions/feedback?</string>
    <string name="enjoying_app">Enjoying app?</string>
    <string name="rate_now">RATE ON PLAY STORE</string>
    <string name="keyboard_caution">Please note that this caution is shown while enabling any 3rd party keyboard not just CK.</string>
    <string name="slide_enable">Click to enable Coding Keyboard</string>
    <string name="slide_select">Select Coding Keyboard as keyboard</string>
    <string name="slide_type">Start typing below to try Coding Keyboard</string>
    <string name="feedback_email">ajkrishna7117me@gmail.com</string>
    <string name="attribution">Flaticon attribution</string>
    <string name="enable">ENABLE</string>
    <string name="infochange">You can change keyboard preferences in settings.</string>
    <string name="start_typing">Start typing...</string>
    <string name="next">NEXT</string>
    <string name="sound">SOUND</string>
    <string name="sound2">Produce sound on key touch?</string>
    <string name="vibrate">VIBRATE</string>
    <string name="vibrate2">Vibrate on key touch?</string>
    <string name="preview">PREVIEW</string>
    <string name="preview2">Display preview of key pressed?</string>
    <string name="settings">Settings</string>
    <string name="auto_close_brackets">AUTO-CLOSE BRACKETS</string>
    <string name="auto_close_brackets2">Auto-insert matching ), ], } after (, [, {</string>
    <string name="auto_close_quotes">AUTO-CLOSE QUOTES</string>
    <string name="auto_close_quotes2">Auto-insert matching " or \' when typing quotes</string>
    <string name="caps_lock_style_label">CAPS LOCK STYLE</string>
    <string name="caps_gboard">GBOARD (double-tap Shift)</string>
    <string name="caps_laptop">LAPTOP (single-tap toggles)</string>
    <string name="share">Share</string>
    <string name="about">About</string>
    <string name="feedback">Send Feedback</string>

</resources>
