<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context="com.ajay.prokeyboard.about">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:src="@drawable/about" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/about"
                android:layout_marginStart="10dp"
                android:textAlignment="center"
                android:textSize="25sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/aboutapp"
                android:textAlignment="center"
                android:textSize="30sp" />
            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:src="@drawable/codinglogo" />
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textAlignment="center"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:text="@string/aboutText"
                android:textAlignment="center"
                android:textSize="20sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="15dp"
                android:text="Download AD FREE version from Play store"
                android:textColor="@color/black"
                android:textSize="15sp" />
            <Button
                android:id="@+id/adfree"
                android:layout_marginTop="10dp"
                android:background="@drawable/roundbtn"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="DOWNLOAD NOW"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="15dp"
                android:text="Have suggestions/feedback?"
                android:textColor="@color/black"
                android:textSize="15sp" />
            <Button
                android:id="@+id/feedback"
                android:layout_marginTop="10dp"
                android:background="@drawable/roundbtn"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/feedback"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"
                android:text="Enjoying app?"
                android:textSize="15sp"
                android:layout_gravity="center"/>
            <Button
                android:id="@+id/rate"
                android:layout_marginTop="10dp"
                android:background="@drawable/roundbtn"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="RATE ON PLAY STORE"/>

            <LinearLayout
                android:id="@+id/infolayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:src="@drawable/information" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:text="@string/infoabout"
                    android:textSize="17sp" />

            </LinearLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:src="@drawable/msg"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Please note that this caution is shown while enabling any 3rd party keyboard not just CK."
                android:layout_marginStart="10dp"
                android:textStyle="italic"
                android:layout_marginEnd="10dp"
                android:textSize="17sp" />
            <ImageView
                android:id="@+id/ad"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/browser_actions_context_menu_max_width"
                android:layout_gravity="center"
                android:src="@drawable/ad"/>
        </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">
                <!-- Sample AdMob Banner ID:  ads:adUnitId="ca-app-pub-3940256099942544/6300978111" -->
                <!--original AdMob Banner ID: ads:adUnitId="ca-app-pub-6204356404799936/7323653457"-->

                <com.google.android.gms.ads.AdView
                    xmlns:ads="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/adViewAbout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    ads:adSize="MEDIUM_RECTANGLE"
                    ads:adUnitId="ca-app-pub-6204356404799936/7323653457"/>
            </LinearLayout>
        <!--
            <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/aboutdev"
                android:textSize="30sp"
                android:textAlignment="center"/>
            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:src="@drawable/ajay" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textAlignment="center"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/college"
                android:textSize="20sp"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hometown"
                android:textSize="20sp"/>
        </LinearLayout> -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/Credits"
                android:textSize="30sp"
                android:textAlignment="center"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:text="@string/flaticon"
                android:textSize="20sp"/>
            <Button
                android:id="@+id/attribution"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/attribution"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp">
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/contact"
                android:textSize="30sp"
                android:textAlignment="center"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="email"
                android:text="@string/email"
                android:textSize="20sp"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:text="@string/linkedin"
                android:textSize="20sp"
                android:layout_marginBottom="10dp"/>

        </LinearLayout>
    </LinearLayout>
</ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>